Fixed game piece color rendering bug

--- a/GameOfThrones/Client/Client.csproj
+++ b/GameOfThrones/Client/Client.csproj
@@ -81,6 +81,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Extensions\ExtendMessageAboutPlayer.cs" />
     <Compile Include="Utility\SoundUtility.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\PlayerInfoViewModel.cs" />
